--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "yarn test",
+    "test:smoke": "sh tests/build_smoke.sh",
     "build": "yarn build",
     "client": "webpack serve --devtool inline-source-map --hot --config webpack.client.config.js"
   },
@@ -26,8 +27,8 @@
   },
   "homepage": "https://github.com/renerr23/tarocco#readme",
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
@@ -40,7 +41,7 @@
     "html-webpack-plugin": "^5.6.4",
     "style-loader": "^4.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.101.3",
+    "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   }
