--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "tarocco",
   "version": "0.0.1",
   "description": "A Tarot-Oracle-inspired Web Application",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "yarn test",
+    "test": "jest --passWithNoTests",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "build": "yarn build",
     "client": "webpack serve --devtool inline-source-map --hot --config webpack.client.config.js"
   },
@@ -29,16 +31,38 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
+   "browserslist": {
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+  },
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
+    "@eslint/js": "^9.38.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.38.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-testing-library": "^7.13.3",
     "file-loader": "^6.2.0",
+    "globals": "^16.4.0",
     "html-webpack-plugin": "^5.6.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "prettier": "^3.6.2",
     "style-loader": "^4.0.0",
+    "ts-jest": "^29.4.5",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1",
